cmake_minimum_required(VERSION 3.16)
project(pypilot_runtime LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(PYPILOT_EVENT_LOOP_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../pypilot-event-loop" CACHE PATH "Path to pypilot-event-loop checkout")
set(PYPILOT_SETTINGS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../pypilot-settings" CACHE PATH "Path to pypilot-settings checkout")
set(PYPILOT_MDNS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../pypilot-mdns" CACHE PATH "Path to pypilot-mdns checkout")

if(EXISTS "${PYPILOT_EVENT_LOOP_DIR}/CMakeLists.txt")
    add_subdirectory("${PYPILOT_EVENT_LOOP_DIR}" "${CMAKE_CURRENT_BINARY_DIR}/pypilot-event-loop")
else()
    message(FATAL_ERROR "pypilot-event-loop checkout not found at ${PYPILOT_EVENT_LOOP_DIR}")
endif()

if(EXISTS "${PYPILOT_SETTINGS_DIR}/CMakeLists.txt")
    add_subdirectory("${PYPILOT_SETTINGS_DIR}" "${CMAKE_CURRENT_BINARY_DIR}/pypilot-settings")
    set(PYPILOT_RUNTIME_WITH_SETTINGS ON)
else()
    set(PYPILOT_RUNTIME_WITH_SETTINGS OFF)
endif()

if(EXISTS "${PYPILOT_MDNS_DIR}/CMakeLists.txt")
    add_subdirectory("${PYPILOT_MDNS_DIR}" "${CMAKE_CURRENT_BINARY_DIR}/pypilot-mdns")
    set(PYPILOT_RUNTIME_WITH_MDNS ON)
else()
    set(PYPILOT_RUNTIME_WITH_MDNS OFF)
endif()

add_library(pypilot_runtime INTERFACE)
target_include_directories(pypilot_runtime INTERFACE
    ${CMAKE_CURRENT_SOURCE_DIR}/src
)
target_link_libraries(pypilot_runtime INTERFACE pypilot_event_loop)
if(PYPILOT_RUNTIME_WITH_SETTINGS)
    target_link_libraries(pypilot_runtime INTERFACE pypilot_settings)
endif()
if(PYPILOT_RUNTIME_WITH_MDNS)
    target_link_libraries(pypilot_runtime INTERFACE pypilot_mdns)
    target_compile_definitions(pypilot_runtime INTERFACE PYPILOT_RUNTIME_WITH_MDNS=1)
endif()

include(CTest)
enable_testing()

function(add_runtime_test target source)
    add_executable(${target} ${source})
    target_link_libraries(${target} PRIVATE pypilot_runtime)
    add_test(NAME ${target} COMMAND ${target})
endfunction()

add_runtime_test(test_runtime_protocol tests/test_runtime_protocol.cpp)
add_runtime_test(test_runtime_value_catalog tests/test_runtime_value_catalog.cpp)
add_runtime_test(test_runtime_server_compile tests/test_runtime_server_compile.cpp)
add_runtime_test(test_runtime_local_io tests/test_runtime_loopback_min.cpp)
add_runtime_test(test_runtime_periodic_io tests/test_runtime_periodic_io.cpp)
add_runtime_test(test_runtime_watch_error tests/test_runtime_watch_error.cpp)
add_runtime_test(test_runtime_multi_client_watch tests/test_runtime_multi_client_watch.cpp)
add_runtime_test(test_runtime_periodic_disconnect tests/test_runtime_periodic_disconnect.cpp)
add_runtime_test(test_runtime_error_paths tests/test_runtime_error_paths.cpp)
add_runtime_test(test_runtime_expanded_values tests/test_runtime_expanded_values.cpp)
add_runtime_test(test_runtime_client_helper_compile tests/test_runtime_client_helper_compile.cpp)
if(PYPILOT_RUNTIME_WITH_SETTINGS)
    add_runtime_test(test_runtime_settings_bridge tests/test_runtime_settings_bridge.cpp)
endif()
if(PYPILOT_RUNTIME_WITH_MDNS)
    add_runtime_test(test_runtime_mdns_compile tests/test_runtime_mdns_compile.cpp)
endif()

add_executable(runtime_server_example examples/RuntimeServerExample/RuntimeServerExample.cpp)
target_link_libraries(runtime_server_example PRIVATE pypilot_runtime)
